gsap animation effects and few fixes- text hz scroll disable x-axis scroll by overflow hidden

--- a/styles/instagram.css
+++ b/styles/instagram.css
@@ -2,11 +2,7 @@
   /* margin-top: 2rem; */
   background-color: black;
 }
-.instagram-id {
-  margin-left: 13rem;
-  margin-bottom: 1rem;
-  font-weight: 100;
-}
+
 .instagram-images-container {
   background: #ffff !important;
   padding-top: 2rem;
