--- a/styles/message-chairman.css
+++ b/styles/message-chairman.css
@@ -34,3 +34,9 @@
   width: 50px;
   height: 50px;
 }
+
+.instagram-id {
+  position: absolute;
+  left: -20rem;
+  top: 48rem;
+}
