--- a/styles/style.css
+++ b/styles/style.css
@@ -27,4 +27,5 @@
 
 .main {
   background: #000000;
+  overflow: hidden; /*without adding this our company text sliding enables x-axis scroll*/
 }
